# short-text

./: Cargo.toml
src/: lib.rs  main.rs
src/interfaces/: file.rs  mod.rs  webpage.rs
src/objects/: content.rs  image.rs  link.rs  list_element.rs  mod.rs  paragraph.rs  section.rs
