[package]
name = "short-text"
version = "0.1.0"
authors = ["Lucas Palomo <devlpalomo@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "https://github.com/Lucas-Palomo/shor-text/README.md"
documentation = "README.md"
repository = "https://github.com/Lucas-Palomo/short-text"
description = "A test package"
keywords = ["text"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
