[package]
name = "short-text"
version = "0.1.1"
authors = ["Lucas Palomo <devlpalomo@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
documentation = "https://github.com/Lucas-Palomo/short-text/blob/master/README.md"
repository = "https://github.com/Lucas-Palomo/short-text"
description = "A test package"
keywords = ["text"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webpage = "1.1.0"
soup = "0.5.0"
